--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -18,40 +18,27 @@
     background-color: #253861;
 }
 
-.root__child {
-    display: flex;
-    flex-direction: column;
+.app {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    max-width: 1024px;
+    min-width: 360px;
+    margin: 0 auto;
 }
 
 .app-wrapper {
-    margin: 0 auto;
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    position: absolute;
-    flex: 1;
-}
-
-.app-wrapper-content {
-    margin: 2px;
-    background-color: #dadbd3;
-    padding-top: 40px;
+    position: relative;
     width: 100%;
+    height: 100%;
+    min-width: 360px;
 }
 
-
-
-
-
-
-
-
-/*
-
-/messages
-/dialogs
-
-/dialogs/3
-/dialogs/2
-
-*/
+.white-line {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 40px;
+    background-color: white;
+    border-bottom: 1px solid #e7e8ec;
+}
