--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -23,7 +23,6 @@
     width: 100%;
     height: 100%;
     max-width: 1024px;
-    min-width: 360px;
     margin: 0 auto;
 }
 
@@ -31,7 +30,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    min-width: 360px;
+    overflow: hidden;
 }
 
 .white-line {
