--- a/client/src/components/Dialogs/Dialogs/Dialogs.scss
+++ b/client/src/components/Dialogs/Dialogs/Dialogs.scss
@@ -1,15 +1,22 @@
-.main {
+.dialogs-page {
     display: flex;
     height: 100%;
     width: 100%;
     background-color: #ededed;
-    box-shadow: -1px 4px 12px -6px rgba(0, 0, 0, 0.75);
+    padding-top: calc(0px + 15 * ((100vw - 320px) / (1920 - 320)));
 }
 
 .chooseChat {
     display: flex;
+    flex: 0.65;
     width: 100%;
     height: 100%;
     justify-content: center;
     align-items: center;
+}
+
+@media (max-width: 560px) {
+    .chooseChat {
+        display: none;
+    }
 }
