--- a/client/src/components/Dialogs/DialogsList/DialogsList.scss
+++ b/client/src/components/Dialogs/DialogsList/DialogsList.scss
@@ -1,26 +1,16 @@
 .dialogs {
     display: flex;
     flex-direction: column;
-    flex: 0.25;
+    flex: 0.35;
+    border-radius: 4px;
 }
 
 .dialogs__header {
     display: flex;
-    justify-content: space-between;
-    padding: 20px;
+    justify-content: center;
     border-right: 1px solid lightgray;
-}
-
-.dialogs__headerRight {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-width: 10vw;
-}
-
-.dialogs__headerRight > .MuiSvgIcon-root {
-    margin-right: 2vw;
-    font-size: 24px !important;
+    background-color: white;
+    border-top-left-radius: 4px;
 }
 
 .dialogs__search {
@@ -62,4 +52,25 @@
 .dialogs__items > a {
     text-decoration: none;
     color: black;
+}
+
+@media (max-width: 560px) {
+    .dialogs {
+        display: block;
+        position: absolute;
+        left: -100%;
+        height: 100%;
+        width: 100%;
+        z-index: 100;
+        transition: .5s all ease-in;
+    }
+
+    .dialogs__items {
+        display: block;
+        height: 100%;
+    }
+}
+
+.show {
+    left: 0;
 }
