--- a/client/src/components/Dialogs/MessagesList/Message.css
+++ b/client/src/components/Dialogs/MessagesList/Message.css
@@ -3,6 +3,7 @@
     font-size: 16px;
     padding: 10px;
     width: fit-content;
+    /* max-width: 200px; */
     border-radius: 10px;
     background-color: #fff;
     margin-bottom: 30px;
