--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -6,10 +6,10 @@
     border-bottom: 1px solid #e7e8ec;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 15px;
 }
 
 .label {
+    margin-left: 15px;
     font-size: x-large;
 }
 
@@ -29,6 +29,7 @@
     text-decoration: none;
     border-radius: 10px;
     padding: 0 10px;
+    font-size: calc(11px + 4 * ((100vw - 320px) / (1920 - 320)));
 }
 
 .navigation a:hover {
