--- a/client/src/pages/HomePage.scss
+++ b/client/src/pages/HomePage.scss
@@ -1,11 +1,14 @@
-.main {
-    position: relative;
-    width: 100%;
+.home-page {
+    display: flex;
+    flex-direction: column;
     height: 100%;
+    overflow-y: scroll;
+    margin-top: 15px;
 }
 
 .element {
     margin: 15px;
+    margin-top: 0;
     padding: 10px;
     border-radius: 4px;
     background-color: white;
@@ -16,6 +19,7 @@
     .element {
         margin: 10px;
         padding: 7px;
+        margin-top: 0;
     }
 }
 
@@ -23,5 +27,6 @@
     .element {
         margin: 6px;
         padding: 5px;
+        margin-top: 0;
     }
 }
