--- a/client/src/pages/DialogsPage/Dialogs/Dialogs.scss
+++ b/client/src/pages/DialogsPage/Dialogs/Dialogs.scss
@@ -56,7 +56,6 @@
 
 @media (max-width: 560px) {
     .dialogs {
-        display: block;
         position: absolute;
         left: -100%;
         height: 100%;
@@ -66,8 +65,7 @@
     }
 
     .dialogs__items {
-        display: block;
-        height: 100%;
+        height: 100px;
     }
 }
 
