--- a/client/src/pages/DialogsPage/Messages/MessageItem.scss
+++ b/client/src/pages/DialogsPage/Messages/MessageItem.scss
@@ -1,9 +1,11 @@
 .messages__item {
+    display: flex;
+    flex-direction: column;
     position: relative;
-    font-size: 16px;
+    overflow-wrap: break-word;
     padding: 10px;
     width: fit-content;
-    /* max-width: 200px; */
+    max-width: 250px;
     border-radius: 10px;
     background-color: #fff;
     margin-bottom: 30px;
@@ -19,7 +21,7 @@
 }
 
 .message__timestamp {
-    margin-left: 10px;
+    align-self: flex-end;
     font-size: xx-small;
 }
 
