--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -4,6 +4,7 @@
     height: 100%;
     overflow-y: scroll;
     margin-top: 15px;
+    padding-bottom: 15px;
 }
 
 .element {
@@ -13,6 +14,12 @@
     border-radius: 4px;
     background-color: white;
     border: 1px solid #e7e8ec;
+}
+
+.favo {
+    width: 40px;
+    height: 40px;
+    background-color: red;
 }
 
 @media(max-width: 800px) {
