--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -39,7 +39,7 @@
 
 @media (max-width: 560px) {
     ::-webkit-scrollbar {
-        width: 1px;
-        height: 1px;
+        width: .1px;
+        height: .1px;
     }
 }
