--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -22,6 +22,10 @@
     background-color: red;
 }
 
+.card-image img {
+    max-width: 100%;
+}
+
 @media(max-width: 800px) {
     .element {
         margin: 10px;
