--- a/client/src/pages/AuthPage/AuthPage.scss
+++ b/client/src/pages/AuthPage/AuthPage.scss
@@ -39,7 +39,7 @@ a:hover {
     background-size: cover;
 
     .copy {
-        color: white;
+        color: black;
         text-align: center;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
