--- a/client/src/pages/ProfilePage/Profile.scss
+++ b/client/src/pages/ProfilePage/Profile.scss
@@ -9,19 +9,44 @@
 
 .profile__info {
     display: flex;
-    justify-content: space-around;
-    margin: 18px 0;
-}
-
-.profile__info img {
-    width: 100px;
-}
-
-.profile__info-attributes {
-    display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 108%;
+    margin: 18px 30px;
+
+    .avatar {
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        overflow: hidden;
+        position: relative;
+        margin-right: 40px;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: fill;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    }
+
+    .info {
+        display: flex;
+        flex-direction: column;
+        flex: .7;
+
+        .name-settings {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+
+        }
+        .attributes {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+        }
+    }
 }
 
 .profile__gallery {
@@ -59,4 +84,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+@media (max-width: 600px) {
+    .profile__info {
+        .avatar {
+            width: 100px;
+            height: 100px;
+        }
+    }
 }
