--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -6,7 +6,7 @@ body > div {
   width: 100%;
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
-  background-color: #efefef;
+  background-color: #f8f8f8;
 }
 
 body {
