--- a/client/src/pages/ProfilePage/Profile.scss
+++ b/client/src/pages/ProfilePage/Profile.scss
@@ -10,23 +10,22 @@
 .profile__info {
     display: flex;
     flex-direction: row;
-    margin: 18px 30px;
+    justify-content: space-evenly;
+    padding: 30px;
+    border-bottom: 1px solid rgb(194, 194, 194);
 
     .avatar {
-        width: 200px;
-        height: 200px;
+        width: 180px;
+        height: 180px;
         border-radius: 50%;
         overflow: hidden;
         position: relative;
-        margin-right: 40px;
 
         img {
-            width: 100%;
-            height: 100%;
-            object-fit: fill;
             position: absolute;
-            top: 0;
-            left: 0;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     }
 
@@ -38,25 +37,68 @@
         .name-settings {
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
+            justify-content: flex-start;
 
+
+            * {
+                font-weight: normal;
+                margin-right: 20px;
+            }
+
+            button {
+                font-weight: normal;
+                font-size: 20px;
+                background: none;
+                border: none;
+                cursor: pointer;
+
+                &:hover {
+                    outline: none;
+                }
+            }
         }
+
         .attributes {
             display: flex;
             flex-direction: row;
-            justify-content: space-evenly;
+            justify-content: flex-start;
+
+            >* {
+                font-weight: normal;
+                cursor: pointer;
+            }
+
+            h3:not(last-child) {
+                margin-right: 20px;
+            }
         }
     }
 }
 
 .profile__gallery {
+    margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-}
+    position: relative;
 
-.profile__gallery img {
-    width: 30%;
+    >* {
+        flex: 0 0 33.3333%;
+
+        >div {
+            height: 0;
+            padding-top: 100%;
+            overflow: hidden;
+            position: relative;
+
+            img {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                cursor: pointer;
+            }
+        }
+    }
 }
 
 .newPostWindow {
@@ -86,7 +128,7 @@
     align-items: center;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
     .profile__info {
         .avatar {
             width: 100px;
