--- a/client/src/pages/ProfilePage/Profile.scss
+++ b/client/src/pages/ProfilePage/Profile.scss
@@ -7,6 +7,10 @@
     overflow-x: hidden;
 }
 
+.mobile-attributes {
+    display: none;
+}
+
 .profile__info {
     display: flex;
     flex-direction: row;
@@ -32,28 +36,40 @@
     .info {
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         flex: .7;
 
         .name-settings {
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
+            height: 40px;
+            margin-bottom: 10px;
 
+            div i {
+                font-size: 35px;
+                cursor: pointer;
+                color: rgb(51, 51, 51);
+            }
 
-            * {
-                font-weight: normal;
+            *:not(:last-child) {
+                font-weight: 500;
                 margin-right: 20px;
             }
 
-            button {
-                font-weight: normal;
-                font-size: 20px;
-                background: none;
-                border: none;
-                cursor: pointer;
+            >div {
+                display: flex;
+                flex-direction: row;
+                align-items: flex-end;
 
-                &:hover {
-                    outline: none;
+                button {
+                    border: 1px solid rgb(194, 194, 194);
+                    padding: 1px 3px;
+                    background-color: white;
+                    border-radius: 4px;
+                    cursor: pointer;
+                    font-size: 15px;
                 }
             }
         }
@@ -68,7 +84,7 @@
                 cursor: pointer;
             }
 
-            h3:not(last-child) {
+            h3:not(:last-child) {
                 margin-right: 20px;
             }
         }
@@ -101,38 +117,145 @@
     }
 }
 
-.newPostWindow {
-    padding: 20px;
-    width: 400px;
-    height: 400px;
-    background-color: burlywood;
+.modal-window {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 500px;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
+    overflow-y: auto;
 
-.closeWindow {
-    width: 40px;
-    height: 40px;
-    background-color: rgb(78, 58, 31);
-    position: absolute;
-    top: 0;
-    right: 0;
-    cursor: pointer;
+    .close-btn {
+        position: absolute;
+        top: 0;
+        right: 0;
+        font-size: 30px; 
+        cursor: pointer; 
+        margin-top: 5px;
+        margin-right: 5px;
+    }
+
+    .delete-btn {
+        position: absolute;
+        top: 0;
+        right: 30px;
+        font-size: 30px; 
+        cursor: pointer; 
+        margin-top: 5px;
+        margin-right: 5px;
+    }
+
+    .element {
+        width: 100% !important;
+        height: 100% !important;
+        margin: 0 !important;
+        border: none !important;
+
+        .card-image img {
+            display: block !important;
+            max-width: 100% !important;
+            margin: 0 auto !important;
+        }
+    }
 }
 
 .newPostBody {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
+    height: 100%;
+
+    // h1 {
+    //     align-self: flex-start;
+    // }
+
+    // >div {
+    //     align-self: center;
+    // }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 780px) {
     .profile__info {
+        padding: 10px;
+
         .avatar {
             width: 100px;
             height: 100px;
+        }
+    }
+    
+    .name-settings {
+        justify-content: center !important;
+        flex-direction: column !important;
+        height: 30px !important;
+
+        h1 {
+            margin-right: 10px !important;
+            font-size: 25px;
+        }
+
+        i {
+            padding-top: 5px;
+            margin-right: 10px !important;
+            font-size: 25px !important;
+        }
+    }
+
+    .attributes {
+        display: none !important;
+    }
+
+    .mobile-attributes {
+        display: flex;
+        border-bottom: 1px solid rgb(194, 194, 194);
+        padding: 10px 0;
+        justify-content: center;
+        align-items: center;
+        
+        >* {
+            font-weight: normal;
+            cursor: pointer;
+        }
+
+        h3:not(:last-child) {
+            margin-right: 20px;
+        }
+    }
+
+    .profile__gallery {
+        margin-top: 10px;
+    }
+
+    .name-settings > div {
+        margin-top: 3px;
+    }
+}
+
+@media (max-width: 560px) {
+    .modal-window {
+        max-height: none;
+        max-width: none;
+    }
+
+    .name-settings .btn-wrapper {
+        align-self: flex-start;
+        flex-direction: column !important;
+
+        button {
+            font-size: 12px !important;
+        }
+
+        button:first-child {
+            margin-bottom: 5px;
         }
     }
 }
