--- a/client/src/pages/DialogsPage/Dialogs/Dialogs.scss
+++ b/client/src/pages/DialogsPage/Dialogs/Dialogs.scss
@@ -42,7 +42,7 @@
 .dialogs__items {
     flex: 1;
     background-color: #fff;
-    overflow-y: scroll;
+    overflow-y: auto;
     border-right: 1px solid lightgray;
 }
 
