--- a/client/src/pages/UsersPage/Users.scss
+++ b/client/src/pages/UsersPage/Users.scss
@@ -1,3 +1,9 @@
+.users-page {
+    height: 100%;
+    max-width: 1024px;
+    margin: 0 auto;
+}
+
 .userPhoto {
      width: 100px;
     height: 100px;
