--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -13,33 +13,28 @@
     border-radius: 9em;
 }
 
-.app {
+.main {
     position: relative;
     width: 100%;
     height: 100%;
-    max-width: 1024px;
     margin: 0 auto;
 }
 
-.app-wrapper {
+.app {
     position: relative;
     width: 100%;
     overflow: hidden;
 }
 
-.white-line {
-    position: absolute;
-    top: 0;
+.WRAPPER {
+    height: 100%;
     width: 100%;
-    height: 40px;
-    background-color: white;
-    border-bottom: 1px solid #e7e8ec;
-    z-index: 0;
+    overflow-y: auto;
 }
 
 @media (max-width: 560px) {
     ::-webkit-scrollbar {
-        width: .1px;
-        height: .1px;
+        width: 1px;
+        height: 1px;
     }
 }
