--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,9 +1,13 @@
-.header {
+.header-wrapper {
     background-color: white;
     height: 40px;
     width: 100%;
-    z-index: 100;
     border-bottom: 1px solid #e7e8ec;
+}
+
+.header {
+    max-width: 1024px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
 }
@@ -70,7 +74,7 @@
     background-color: #f6f6f6;
     // width: 100%;
     max-height: 310px;
-    overflow-y: scroll;
+    overflow-y: auto;
     border: 1px solid #ddd;
     z-index: 1;
 
