--- a/client/src/pages/AuthPage/AuthPage.scss
+++ b/client/src/pages/AuthPage/AuthPage.scss
@@ -27,7 +27,7 @@ a:hover {
 .split-screen {
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 100%;
 }
 
@@ -154,7 +154,7 @@ a:hover {
 
     .right {
         height: 100%;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 }
 
