--- a/client/src/pages/DialogsPage/DialogsPage.scss
+++ b/client/src/pages/DialogsPage/DialogsPage.scss
@@ -1,7 +1,8 @@
 .dialogs-page {
     display: flex;
     height: 100%;
-    width: 100%;
+    max-width: 1024px;
+    margin: 0 auto;
     background-color: #ededed;
 }
 
