--- a/client/src/pages/DialogsPage/Messages/Messages.scss
+++ b/client/src/pages/DialogsPage/Messages/Messages.scss
@@ -37,7 +37,7 @@
     flex: 1;
     background-color: rgb(200, 200, 200);
     padding: 15px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .messages__footer {
