--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -1,11 +1,11 @@
 .home-page {
     padding-bottom: 15px;
     height: 100%;
-    overflow-y: scroll;
+    max-width: 1024px;
+    margin: 0 auto;
 }
 
 .home-page__inner {
-    position: relative;
     margin: 0 auto;
     display: flex;
     max-width: 600px;
@@ -69,7 +69,7 @@
 
     .show-comments {
         max-height: 150px;
-        overflow: scroll;
+        overflow: auto;
     }
 
     .show-comments-btn {
