--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -65,6 +65,8 @@
         height: auto;
         max-height: 42px;
         overflow: hidden;
+        max-width: 100%;
+        overflow-wrap: break-word;
     }
 
     .show-comments {
