--- a/client/src/pages/UsersPage/Users.scss
+++ b/client/src/pages/UsersPage/Users.scss
@@ -1,14 +1,66 @@
 .users-page {
     height: 100%;
-    max-width: 1024px;
+    max-width: 560px;
     margin: 0 auto;
+    position: relative;
+
+    .search-user {
+        position: relative;
+        width: 100%;
+            
+        .search-input {
+            font-size: 16px;
+            padding: 14px 20px 12px 30px;
+            border: none;
+            height: 39px;
+            width: 100%;
+    
+            &:focus {
+                outline: none;
+            }
+        }
+    }
+    
+    .dropdown-content {
+        position: absolute;
+        background-color: #f6f6f6;
+        width: 100%;
+        overflow-y: auto;
+        border: 1px solid #ddd;
+        z-index: 1;
+
+        a:not(:last-child) {
+            border-bottom: 1px solid #dddddd;
+        }
+
+        > a {
+            color: black;
+            padding: 3px 10px;
+            text-decoration: none;
+            display: block;
+            height: 40px;
+            cursor: pointer;
+
+            &:hover {
+                background-color: #d8d4d4;
+                text-decoration: none;
+            }
+
+            > div {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+
+                div {
+                    width: 32px !important;
+                    height: 32px !important;
+                }
+
+                p {
+                    padding-left: 5px;
+                }
+            }
+        }
+    }
 }
 
-.userPhoto {
-     width: 100px;
-    height: 100px;
-}
-
-.selectedPage {
-    font-weight: bold;
-}
