--- a/client/src/pages/AuthPage/AuthPage.scss
+++ b/client/src/pages/AuthPage/AuthPage.scss
@@ -99,6 +99,10 @@ a:hover {
         margin-bottom: 0.5rem;
         font-style: 0.75rem;
     }
+
+    small {
+        color: red;
+    }
 }
 
 .input-container .password {
