--- a/client/src/pages/DialogsPage/Messages/Messages.scss
+++ b/client/src/pages/DialogsPage/Messages/Messages.scss
@@ -6,7 +6,6 @@
 }
 
 .messages__header {
-    padding-left: 5px;
     background-color: white;
     border-top-right-radius: 4px;
     display: flex;
@@ -21,11 +20,24 @@
 .messages__headerInfo {
     flex: 1;
     padding-left: 10px;
-}
 
-.messages__headerInfo > h3 {
-    margin: 0;
-    font-size: 20px;
+    a {        
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        color: black;
+
+        &:hover {
+            text-decoration: none;
+        }
+
+        div:last-child {
+            display: flex;
+            align-items: center;
+            margin-left: 5px;
+            font-size: 20px;
+        }
+    }
 }
 
 .messages__headerInfo > p {
