--- a/client/src/pages/UsersPage/Users.scss
+++ b/client/src/pages/UsersPage/Users.scss
@@ -7,10 +7,14 @@
     .search-user {
         position: relative;
         width: 100%;
+
+        i {
+            margin-left: 5px;
+        }
             
         .search-input {
             font-size: 16px;
-            padding: 14px 20px 12px 30px;
+            padding: 14px 20px 12px 35px;
             border: none;
             height: 39px;
             width: 100%;
