--- a/client/src/pages/DialogsPage/Messages/Messages.scss
+++ b/client/src/pages/DialogsPage/Messages/Messages.scss
@@ -90,6 +90,7 @@
         border: none;
         color: #444444;
         border-radius: 20px;
+        background: none;
     }
 
     button:disabled {
