--- a/client/src/components/Slider/Slider.scss
+++ b/client/src/components/Slider/Slider.scss
@@ -1,70 +1,70 @@
-.slider {
-    position: relative;
-    height: 385px;
-}
+// .slider {
+//     position: relative;
+//     height: 385px;
+// }
 
-.container {
-    height: 100%;
-    overflow: hidden;
-}
+// .container {
+//     height: 100%;
+//     overflow: hidden;
+// }
 
-.track {
-    height: 100%;
-    display: flex;
-    transition: .2s;
-}
+// .track {
+//     height: 100%;
+//     display: flex;
+//     transition: .2s;
+// }
 
-.item {
-    height: 100%;
-}
+// .item {
+//     height: 100%;
+// }
 
-.item img {
-    height: 100%;
-    width: 100%;
-}
+// .item img {
+//     height: 100%;
+//     width: 100%;
+// }
 
-.btn_prev,
-.btn_next {
-    width: 6%;
-    height: 16%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
-}
+// .btn_prev,
+// .btn_next {
+//     width: 6%;
+//     height: 16%;
+//     background-repeat: no-repeat;
+//     background-size: cover;
+//     background-position: center;
+//     cursor: pointer;
+//     position: absolute;
+//     top: 50%;
+//     transform: translate(0, -50%);
+// }
 
-.btn_next {
-    right: 0;
-    background-image: url(./img/right.svg);
-}
+// .btn_next {
+//     right: 0;
+//     background-image: url(./img/right.svg);
+// }
 
-.btn_prev {
-    left: 0;
-    background-image: url(./img/left.svg);
-}
+// .btn_prev {
+//     left: 0;
+//     background-image: url(./img/left.svg);
+// }
 
-.dot-wrapper {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%, -100%);
-}
+// .dot-wrapper {
+//     position: absolute;
+//     display: flex;
+//     justify-content: center;
+//     top: 100%;
+//     left: 50%;
+//     transform: translate(-50%, -100%);
+// }
 
-.slider-dot {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    border: 2px solid #444;
-    margin: 5px;
-    box-shadow: 0px 0px 6px 1px black;
-    cursor: pointer;
-}
+// .slider-dot {
+//     width: 10px;
+//     height: 10px;
+//     border-radius: 50%;
+//     border: 2px solid #444;
+//     margin: 5px;
+//     box-shadow: 0px 0px 6px 1px black;
+//     cursor: pointer;
+// }
 
-.slider-dot:hover {
-    border: 2px solid #fdd01c;
-}
+// .slider-dot:hover {
+//     border: 2px solid #fdd01c;
+// }
