--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -2,13 +2,6 @@
   box-sizing: border-box;
 }
 
-body > div {
-  width: 100%;
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
-  background-color: #f8f8f8;
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -19,6 +12,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-width: 320px;
+
+  > div {
+    width: 100%;
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
+    background-color: #f8f8f8;
+  }
 }
 
 code {
